# deadbeef-plugin-fmidi

./: .gitignore  CMakeLists.txt  fluid.c  fluid.h
